# ScaLERQEC

./: .gitignore  MYPY_ERRORS_SUMMARY.md  README.md  TYPE_IMPROVEMENTS.md  Tutorial.ipynb  mypy.ini  pyproject.toml  rebuild.ps1  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
.github/workflows/: ai-code-review.yml  pr-validation.yml
QEPG/: README.md  bindings.cpp
QEPG/src/: LERcalculator.cpp  LERcalculator.hpp  QEPG.cpp  QEPG.hpp  clifford.cpp  cuda_accel.hpp  decoder.cpp  decoder.hpp  sampler.cpp  sampler.hpp  sampler_gpu.cu  simd_matrix.cpp  simd_matrix.hpp
benchmark/: README.md  benchmark_fixp.py  benchmark_samplerate.py  stimground.py  stimspeed.py
benchmarksuits/: 3_qubit_rep.py  5_qubit_code.py  Tutorial.ipynb  generate_stim_circuit.py  hexagon_z.py  square_3_z.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/api/: modules.html  scalerqec.Monte.html  scalerqec.QEC.html  scalerqec.Stratified.html  scalerqec.Symbolic.html  scalerqec.html  scalerqec.util.html
docs/source/: conf.py  index.rst
src/: README.md
src/scaler/: LERcalculator.py  QEPGpython.py  __init__.py  clifford.py  interface.py  monteLER.py  stratifiedLERcalc.py  stratifiedScurveLER.py  (+1 more)
src/scaler.egg-info/: PKG-INFO
test/: test_LER_small_cases.py  test_QEPG_by_stim.py  test_sampler.py  test_sampler_fix_QEPG.py  test_stratified_by_dp.py  test_stratified_by_stim.py  test_symbolic_dp_by_stim.py
tests/: __init__.py  conftest.py
(+164 files in other folders)
