[build-system]

requires = [
    "setuptools", 
    "wheel",
    "pybind11>=2.11"
]

build-backend = "setuptools.build_meta"



[project]

name = "scalerqec"
version = "0.0.1"
description = "ScaLER: Scalable testing of logical error rate for quantum error correction circuits"
authors = [
    {name = "John Ye", email = "yezhuoyang@cs.ucla.edu"}
]
requires-python = ">=3.9"
readme = "README.md"



dependencies = [
    "stim",
    "pymatching",
    "sinter",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
    "tqdm"
]


[project.urls]
Homepage = "https://github.com/yezhuoyang/ScaLERQEC"